--- a/Profiles/app/src/main/AndroidManifest.xml
+++ b/Profiles/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera2" android:required="false"  />
+    <uses-feature android:name="android.hardware.camera2" android:required="true"  />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- End Google maps permission -->
 
